<resources>
    <string name="app_name">School</string>
    <string name="middle_school">Middle School</string>
    <string name="student_login">Student Login</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="code">Code</string>
    <string name="login">Login</string>
    <string name="get_started_message">SageSurfer, a care coordination and member engagement platform specifically designed for K-12.</string>
    <string name="lets_get_started">Let\'s Get Started!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="greetings">Good Morning</string>
    <string name="physical_activity">Physical\nActivity</string>
    <string name="skill_development">Skill\nDevelopment</string>
    <string name="adequate_sleep">Adequate\nSleep</string>
    <string name="social_activities">Social\nActivities</string>
    <string name="Emotional_Support">Emotional\nSupport</string>
    <string name="Proper_Nutrition">Proper\nNutrition</string>
    <string name="mood_tracking">Mood Tracking</string>
    <string name="view_all">View All</string>
    <string name="like">Like</string>
    <string name="share">Share</string>
    <string name="view">View</string>
    <string name="addictition_notification_msg"> has beed shared addiction with you.</string>
    <string name="personal_support_team">Personal Support Team</string>
    <string name="care_team">Care Team</string>
    <string name="event_activity">Event Activity</string>
    <string name="social_activity">Social Activity</string>
    <string name="gamification">Gamification</string>
    <string name="last_visit">Last Visit</string>
    <string name="view_all_members">View All\nMembers</string>
    <string name="last_contact">Last Contact</string>
    <string name="invite_member">Invite\nMember</string>
    <string name="new_user">New User</string>
    <string name="platform_reg_user">Platform Registerd User</string>
    <string name="role_name">Role Name:</string>
    <string name="username_">User Name :</string>
    <string name="first_name">First Name</string>
    <string name="search_user">Search User</string>
    <string name="last_name">Last Name</string>
    <string name="user_email">User Email :</string>
    <string name="email">Email</string>
    <string name="cancel">Cancel</string>
    <string name="invite">Invite</string>
    <string name="date">Date</string>
    <string name="descriptionWithDots">Description:</string>
    <string name="search">Search</string>
    <string name="Add_Journaling">Add Journaling</string>
    <string name="Journaling">Journaling</string>
    <string name="title">Title</string>
    <string name="goal_title">Goal Title</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_desc">Enter Description</string>
    <string name="desc">Description</string>
    <string name="location">Location</string>
    <string name="enter_location">Enter Location</string>
    <string name="share_with">Share With</string>
    <string name="attachment">Attachment</string>
    <string name="no_records_found">No record found</string>
    <string name="diet_plan">Diet Plan</string>
    <string name="diet_name">Dite name</string>
    <string name="enter_nutrition_title_">Enter Nutrition Title <font fgcolor='#ff0000'>*</font></string>
    <string name="enter_nutrition_title">Enter Nutrition Title</string>
    <string name="nutrition_que_1">1) How would you describe your diet?</string>
    <string name="please_enter_answer">Please Enter Answer</string>
    <string name="nutrition_que_2">2) How much protein do you need?</string>
    <string name="nutrition_que_3">3) What does a healthy diet look like to you?</string>
    <string name="nutrition_que_4">4) What did you have for breakfast?</string>
    <string name="nutrition_que_5">5) How many servings of fruits and vegetables do you have per day?</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_journaling">Journaling</string>
    <string name="menu_assessment">Assessment</string>
    <string name="menu_nutrition">Nutrition</string>
    <string name="menu_team_care">Team Care</string>
    <string name="menu_edu_and_spi">Education / Spiritual</string>
    <string name="nutrition_que_6">6)How often do you eat fish?</string>
    <string name="nutrition_que_7">7)What medications are you taking?</string>
    <string name="inspiration_content">Inspiration Content</string>
    <string name="add_content">Add Content</string>
    <string name="add_mood">Add Mood</string>
    <string name="Emotional_Support_que1">1) How do you sleep, feel this morning?</string>
    <string name="Emotional_Support_que2">2) How are you doing, feeling this afternoon?</string>
    <string name="Emotional_Support_que3">3) How did you feel about the day before your sleep</string>
    <string name="Emotional_Support_que4">4) Did you connect with or more members from your team today</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="Emotional_Support_que5">5) Did you make any promise to do something that you still need to complete today?</string>
    <string name="Emotional_Support_que6">6) Did you need to start or continue on a big project so that you don\'t procrastinate?</string>
    <string name="active">Active</string>
    <string name="completed">Completed</string>
    <string name="missed">Missed</string>
    <string name="today_status_text1">Today Status :</string>
    <string name="demo_large_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="demo_date">Mar 03, 2022 to Mar 16, 2022</string>
    <string name="question">Question</string>
    <string name="self_care_management">Self Care\nManagement</string>
    <string name="educational">Educational</string>
    <string name="spiritual">Spiritual</string>
    <string name="Nutritional_Guidance">Nutritional Guidance</string>
    <string name="last_night_sleep">Last Night Sleep</string>
    <string name="sleep_history">Sleep History</string>
    <string name="good">Good</string>
    <string name="how_many_hours">How many hours?</string>
    <string name="reason">Reason</string>
    <string name="enter_reason">Enter Reason</string>
    <string name="adequate_sleep_input">Adequate Sleep Input</string>
    <string name="sleep_question">Did you had a good sleep?</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="physical_activity_">Physical activity</string>
    <string name="steps">Steps</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="stress">Stress</string>
    <string name="bp">Blood\nPressure</string>
    <string name="hours">Hours</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="yearly">Yearly</string>
    <string name="today">Today</string>
    <string name="date_time">Mon, 08 Mar</string>
    <string name="gallery">Gallery</string>
    <string name="Task">Task</string>
    <string name="talk">Talk</string>
    <string name="crisis">Crisis</string>
    <string name="active_crisis">Active Crisis</string>
    <string name="crisis_episod">Crisis Episode</string>
    <string name="crisis_resolved">Crisis Resolved</string>
    <string name="crisis_msg">Suicidal ideation and statements when upset youth reports he wants to hurt himself.</string>
    <string name="pending_forms">Pending Forms</string>
    <string name="demo_text">Demo Text</string>
    <string name="last_score">Last Score</string>
    <string name="patient_name">Patient Name *</string>
    <string name="enter_name">Enter Name</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="select_date">Select Date</string>
    <string name="assessment_que_1">1) Little interest of pleasure in doing things *</string>
    <string name="not_at_all">Not at all</string>
    <string name="several_days">Several days</string>
    <string name="more_than_half_days">More than half days</string>
    <string name="nearly_every_day">Nearly every day</string>
    <string name="assessment_que_2">2) Feeling down, depressed or hopeless *</string>
    <string name="assessment_que_3">3) Poor appetite or overeating</string>
    <string name="assessment_que_4">4) Thoughts that you would be better off dead or of hurting yourself in some way *</string>
    <string name="submit">Submit</string>
    <string name="quotes">Quotes</string>
    <string name="lough">Lough</string>
    <string name="setting">Setting</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="students">Student</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm New Password</string>
    <string name="detail_view">Detail View</string>
    <string name="desc_demo_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. \nLorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book</string>
    <string name="frequently_asked_questions">Frequently Asked Questions</string>
    <string name="feedback">Feedback</string>
    <string name="about_us">About Us</string>
    <string name="upload_permission">"Need to provide permission to upload file. "</string>
    <string name="notifications">Notifications</string>
    <string name="support">Support</string>
    <string name="positive_quotes">Positive Quotes</string>
    <string name="logout">Logout</string>
    <string name="planner">Planner</string>
    <string name="runtime_permissions_txt">Please enable ALL permissions from app settings.</string>
    <string name="menu_team">Team</string>
    <string name="toolkit">Toolkit</string>
    <string name="no_result_found">Sorry, No result were found</string>
    <string name="faq_que_1">What causes mental illnesses?</string>
    <string name="faq_que_2">Does stress cause mental illness?</string>
    <string name="faq_que_3">How do I get for a mental illness?</string>
    <string name="faq_que_4">Can mental illnesses be successfully treated?</string>
    <string name="faq_que_5">Does medical insurance cover treatment?</string>
    <string name="please_describe_your_problem">Please describe your problem</string>
    <string name="category">Category</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="enter_mobile_num">Enter Mobile Number</string>
    <string name="save">Save</string>
    <string name="add_medical_care_pro">Add Medical Care Provider</string>
</resources>