<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_journaling"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_journaling" />
        <item
            android:id="@+id/nav_assessment"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_assessment" />
        <item
            android:id="@+id/nav_nutrition"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_nutrition" />
        <item
            android:id="@+id/nav_team_care"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_team_care" />
        <item
            android:id="@+id/nav_edu_and_spi"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_edu_and_spi" />
    </group>
</menu>