<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="15dp"
    android:layout_margin="8dp"

    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/margin_8">

        <TextView
            android:id="@+id/tv_text_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/add_medical_care_pro"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



        <TextView
            android:id="@+id/tv_txt_how_many_hrs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:visibility="visible"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_text_heading" />




        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:hint="@string/enter_name"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:padding="16dp"
            android:textSize="14sp"
            android:visibility="visible"
            android:layout_marginEnd="16dp"
            android:background="@drawable/primary_orange_rounded_border"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_txt_how_many_hrs" />


        <TextView
            android:id="@+id/tv_mobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/mobile"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_name" />

        <EditText
            android:id="@+id/et_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:hint="@string/enter_mobile_num"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:padding="16dp"
            android:textSize="14sp"
            android:visibility="visible"
            android:layout_marginEnd="16dp"
            android:background="@drawable/primary_orange_rounded_border"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_mobile" />

        <LinearLayout
            android:id="@+id/ll_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:weightSum="2"
            android:visibility="visible"
            android:paddingBottom="16dp"

            android:layout_marginTop="36dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_mobile">

            <Button
                android:id="@+id/btn_cancel_gratitude"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner_btn_cancel"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/cancel"
                android:paddingStart="16dp"
                android:paddingTop="3dp"
                android:layout_margin="2dp"
                android:paddingEnd="16dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginStart="3dp"
                android:layout_weight="1"
                android:background="@drawable/orange_rounded_btn_shape_15dp"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/save"
                android:paddingStart="16dp"
                android:paddingTop="3dp"
                android:paddingEnd="16dp"
                android:layout_margin="2dp"
                android:textColor="@color/black"
                android:textColorHint="@color/white"
                android:textSize="14sp"/>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>